--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "rustalyzer"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Josh Asplund <joshasplund@gmail.com>"]
 
 [dependencies]
+clap = "2.21"
